Выполнил обязательное домашнее задание

--- a/index.html
+++ b/index.html
@@ -180,14 +180,7 @@
 				<li class="portfolio-item"><img src="images/portfilio/portfolio-10.jpg" alt="portfolio"></li>
 				<a href="#" class="portfolio-btn prev" id="arrow-left"></a>
 				<a href="#" class="portfolio-btn next" id="arrow-right"></a>
-				<ul class="portfolio-dots">
-					<!-- <li class="dot dot-active"></li>
-					<li class="dot"></li>
-					<li class="dot"></li>
-					<li class="dot"></li>
-					<li class="dot"></li>
-					<li class="dot"></li> -->
-				</ul>
+				<ul class="portfolio-dots"></ul>
 			</ul>
 		</div>
 	</div>
@@ -208,11 +201,11 @@
 							<option value="1.4">Интерьер Частного дома</option>
 							<option value="2">Интерьер Офиса</option>
 						</select>
-						<input type="number" min="1" step="1" class="calc-item calc-square"
+						<input type="text" min="1" step="1" class="calc-item calc-square"
 							placeholder="Общая площадь*">
-						<input type="number" min="1" step="1" class="calc-item calc-count"
+						<input type="text" min="1" step="1" class="calc-item calc-count"
 							placeholder="Количество помещений">
-						<input type="number" min="1" step="1" class="calc-item calc-day"
+						<input type="text" min="1" step="1" class="calc-item calc-day"
 							placeholder="Срок исполнения (в днях)">
 						<div class="calc-total">ИТОГО: <span id="total">0</span></div>
 						<div class="calc-mini">* стоимость по умолчанию расчитывается на 1 помещение и срок 10 дней <br>
