--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
 	
 	<script src="./scripts/main.js"></script>
-	<script src="/scripts/plugins/validator.js"></script>
+	<script src="./scripts/plugins/validator.js"></script>
 	<script>
 		const validForm1 = new Validator({
 			selector: '#form1',
